# head-terminal

./: PLANO-REFATORACAO-2.md  PLANO-REFATORACAO.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: e2e.sh  head-terminal-dev.sh  head-terminal-env.sh  head-terminal-release.sh  install-desktop-entry.sh
scripts/lib/: runtime-env.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  HeadTerminal.desktop.hbs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: git.rs  lib.rs  main.rs  mcp.rs  startup.rs  system.rs  voice.rs
src/actions/: clearAgentSession.ts  sendAgentCommand.ts
src/components/: BootScreen.tsx  ErrorBoundary.tsx
src/config/: agents.test.ts  agents.ts  theme.ts  toolbar.ts
src/core/: activity-detector.test.ts  activity-detector.ts  activity-duration.test.ts  activity-duration.ts  activity-utils.ts  agent-instructions.test.ts  agent-instructions.ts  agent-launcher.test.ts  agent-launcher.ts  claude-accounts.test.ts  claude-accounts.ts  context-meter.test.ts  context-meter.ts  debounce.test.ts  debounce.ts  dev-metrics.ts  export-diagnostic.ts  flip-animate.test.ts  flip-animate.ts  git-context-registry.test.ts  git-context-registry.ts  git-context-utils.test.ts  git-context-utils.ts  git-watch-bridge.ts  logger.test.ts  logger.ts  mcp-bridge.test.ts  mcp-bridge.ts  notifications.ts  openai-credentials.ts  pane-fit-registry.ts  pane-supervisor.test.ts  pane-supervisor.ts  path-utils.ts  pty-bridge.ts  pty-env.ts  pty-output-buffer.ts  pty-text.test.ts  pty-text.ts  (+19 more)
(+42 files in other folders)
