[package]
name = "head-terminal"
version = "0.1.0"
description = "Agent-focused terminal desktop app"
authors = ["matheus"]
edition = "2021"

[lib]
name = "head_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-pty = "0.3"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
keyring = { version = "3", features = ["linux-native-sync-persistent"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# TEMP TEST: local fork of tauri-plugin-pty that offloads the blocking
# pty read/write/wait calls to spawn_blocking, instead of running them
# directly on tokio's fixed-size async worker pool. Upstream (0.3.0, latest
# as of 2026-06) still blocks those worker threads, so opening enough
# terminals at once starves the runtime and the whole app stops responding
# to keystrokes. Revert this patch once confirmed/upstreamed.
[patch.crates-io]
tauri-plugin-pty = { path = "vendor/tauri-plugin-pty" }
